// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Processor components Editor Renders with props 1`] = `
<div
  className="processor-has-type caldera-forms-processor not-opened"
>
  <div
    className="processor-label"
  >
    caldera-forms/procesor/email - p1
  </div>
  <div>
    Type: 
    <span
      className="processor-type"
    >
      caldera-forms/procesor/email
    </span>
  </div>
  <div
    className="processor-editor"
  >
    <div
      className="caldera-forms-processor-config"
    >
      <div
        className="caldera-config-group"
      >
        <div
          className="caldera-config-field"
        >
          <label
            htmlFor="fromName"
          >
            From Name
          </label>
          <input
            aria-describedby="fromName-description"
            className="field-config field-config"
            id="fromName"
            onChange={[Function]}
            required={false}
            type="text"
            value={undefined}
          />
          <p
            className="description"
            id="fromName-description"
          >
            Who the email is from
          </p>
        </div>
      </div>
      <div
        className="caldera-config-group"
      >
        <div
          className="caldera-config-field"
        >
          <label
            htmlFor="fromEmail"
          >
            From Email
          </label>
          <input
            aria-describedby="fromEmail-description"
            className="field-config field-config"
            id="fromEmail"
            onChange={[Function]}
            required={false}
            type="email"
            value={undefined}
          />
          <p
            className="description"
            id="fromEmail-description"
          >
            Who the email is from
          </p>
        </div>
      </div>
      <div
        className="caldera-config-group"
      >
        <div
          className="caldera-config-field"
        >
          <label
            htmlFor="contentType"
          >
            Content type
          </label>
          <select
            className="field-config field-config"
            id="contentType"
            onChange={[Function]}
            value={undefined}
          >
            <option
              className="caldera-config-option"
              value="html"
            >
              HTML
            </option>
            <option
              className="caldera-config-option"
              value="plain"
            >
              Plain Text
            </option>
          </select>
          <p
            className="description"
            id="contentType-description"
          >
            HTML or plain text?
          </p>
        </div>
      </div>
      <div
        className="caldera-config-group"
      >
        <div
          className="caldera-config-field"
        >
          <label
            htmlFor="bodyPadding"
          >
            Message Body Padding
          </label>
          <input
            aria-describedby="bodyPadding-description"
            className="field-config field-config"
            id="bodyPadding"
            onChange={[Function]}
            required={false}
            type="number"
            value={undefined}
          />
          <p
            className="description"
            id="bodyPadding-description"
          >
            How much space to add around message body
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Processor components Editor renders with props 1`] = `
<div
  className="processor-has-type caldera-forms-processor not-opened"
>
  <div
    className="processor-label"
  >
    caldera-forms/procesor/email - p1
  </div>
  <div>
    Type: 
    <span
      className="processor-type"
    >
      caldera-forms/procesor/email
    </span>
  </div>
  <div
    className="processor-editor"
  >
    <div
      className="caldera-forms-processor-config"
    >
      <div
        className="caldera-config-group"
      >
        <div
          className="caldera-config-field"
        >
          <label
            htmlFor="fromName"
          >
            From Name
          </label>
          <input
            aria-describedby="fromName-description"
            className="field-config field-config"
            id="fromName"
            onChange={[Function]}
            required={false}
            type="text"
            value={undefined}
          />
          <p
            className="description"
            id="fromName-description"
          >
            Who the email is from
          </p>
        </div>
      </div>
      <div
        className="caldera-config-group"
      >
        <div
          className="caldera-config-field"
        >
          <label
            htmlFor="fromEmail"
          >
            From Email
          </label>
          <input
            aria-describedby="fromEmail-description"
            className="field-config field-config"
            id="fromEmail"
            onChange={[Function]}
            required={false}
            type="text"
            value={undefined}
          />
          <p
            className="description"
            id="fromEmail-description"
          >
            Who the email is from
          </p>
        </div>
      </div>
      <div
        className="caldera-config-group"
      >
        <div
          className="caldera-config-field"
        >
          <label
            htmlFor="contentType"
          >
            Content type
          </label>
          <select
            className="field-config field-config"
            id="contentType"
            onChange={[Function]}
            value={undefined}
          >
            <option
              className="caldera-config-option"
              value="html"
            >
              HTML
            </option>
            <option
              className="caldera-config-option"
              value="plain"
            >
              Plain Text
            </option>
          </select>
          <p
            className="description"
            id="contentType-description"
          >
            HTML or plain text?
          </p>
        </div>
      </div>
      <div
        className="caldera-config-group"
      >
        <div
          className="caldera-config-field"
        >
          <label
            htmlFor="bodyPadding"
          >
            Message Body Padding
          </label>
          <input
            aria-describedby="bodyPadding-description"
            className="field-config field-config"
            id="bodyPadding"
            onChange={[Function]}
            required={false}
            type="text"
            value={undefined}
          />
          <p
            className="description"
            id="bodyPadding-description"
          >
            How much space to add around message body
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Processor components OpenEditorButton renders with label props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    Open!
  </span>
</button>
`;

exports[`Processor components OpenEditorButton renders with out the non-required props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    Edit Settings
  </span>
</button>
`;

exports[`Processor components Remove Processor Button Renders with label props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    R2
  </span>
</button>
`;

exports[`Processor components Remove Processor Button Renders without label props 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  style={undefined}
>
  <span>
    Remove Processor
  </span>
</button>
`;

exports[`Processor components TypeChooser Renders props 1`] = `
<select
  className="processor-type-chooser"
  onChange={[Function]}
  value={null}
>
  <option />
  <option
    value="caldera-forms/procesor/email"
  >
    Email
  </option>
  <option
    value="caldera-forms/processor/redirect"
  >
    Redirect After Form Submission
  </option>
</select>
`;

exports[`Using RenderGroup RenderGroup snapshot 1`] = `
<div
  className="caldera-config-field-setup"
>
  <div
    className="caldera-config-group"
  >
    <div
      className="caldera-config-field"
    >
      <label
        htmlFor="cf-something-select-id"
      >
        Content type
      </label>
      <select
        className="field-config field-config"
        id="cf-something-select-id"
        onChange={[Function]}
        value="html"
      >
        <option
          className="caldera-config-option"
          value="html"
        >
          HTML
        </option>
        <option
          className="caldera-config-option"
          value="plain"
        >
          Plain Text
        </option>
      </select>
      <p
        className="description"
        id="cf-something-select-id-description"
      >
        Choose content type, default is HTML
      </p>
    </div>
  </div>
</div>
`;
